add basic distributed tracing

--- a/ticket-validation-service/src/main/resources/application.yml
+++ b/ticket-validation-service/src/main/resources/application.yml
@@ -15,3 +15,8 @@ server:
   port: 0
 ticketing-properties:
   base-url: http://TICKETING-SERVICE
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
